# cormorant

./: CMakeLists.txt  readme.md
lib/: CMakeLists.txt
lib/tinyEXIF/: CMakeLists.txt
lib/tinyfiledialogs/: CMakeLists.txt
src/: CMakeLists.txt  application.cpp  cache.cpp  config.cpp  export.cpp  frame_buffer.cpp  glCommon.cpp  group.cpp  image.cpp  imageView.cpp  main.cpp  stats.cpp  ui.cpp
src/include/: application.h  cache.h  colors.h  config.h  export.h  frame_buffer.h  glCommon.h  group.h  image.h  imageView.h  imguiConfig.h  stats.h  styles.h  ui.h
src/res/: fontFA6.h  fontOpenSans.h  icon64.h  win.rc
